Type fix for long readable text

--- a/site/.vuepress/theme/styles/index.styl
+++ b/site/.vuepress/theme/styles/index.styl
@@ -41,6 +41,7 @@
 
 body
   { bodyType }
+  line-height 1.25
   color $textColor
 
 h1,
@@ -69,9 +70,8 @@ a.header-anchor
 article
   header
     all unset
-
-p, ul, ol
-  line-height 1.25
+  p, ul, ol
+    line-height 1.75
 
 .content-wrapper
   padding 0
